--- a/home.css
+++ b/home.css
@@ -48,7 +48,7 @@ p{
     border-style: outset;
 }
 .card1{
-    background-image: url('https://futurevolve.com/uploads/college/wide_image/39271/CMR_College_of_Engineering_and_Technology_Image.JPG');   
+    background-image: url('https://gyaanarth.com/wp-content/uploads/2022/06/CMR_01.jpg');   
 }
 .card2{
     background-image: url('https://images.collegedunia.com/public/college_data/images/appImage/23900_imageslider4.jpg');    
